[package]
name = "OxidizedChess"
version = "0.9.0"
authors = ["AshtonSteed <75332701+AshtonSteed@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.4"


[profile.release]
backtrace = true
lto = true
opt-level = 3
overflow-checks = false
debug = 1
